feat: 太客と損益分岐点表示欄

--- a/banana-home.html
+++ b/banana-home.html
@@ -606,7 +606,32 @@
             font-weight: bold;
             align-items: center;
         }
+        .hutokyaku{
+            border-top: 1px solid #eee;       
+            width: 95%;
+            margin: 0 auto 5px;
+        }
 
+        .hutokyaku-label{
+            color:#2e7c40;
+            font-weight: bold;
+        }
+
+        .hutokyaku-name{
+            font-weight: bold;
+            margin-left: 20px;
+        }
+
+        .no1{
+            font-size: 18px;
+        }
+
+        .no2{
+            font-size: 16px;
+        }
+        .no3{
+            font-size: 14px;
+        }
         .works-link{
             color:#2449a8; 
             text-decoration: none;
@@ -916,17 +941,31 @@
                 <div class="main-grid-right">
                     <div class="works-container">
                         <div class="works-label">
-                            <p><font color="#529C09"><i class="fa-solid fa-file"></i></font>　課題</p>
+                            <p><font color="#529C09"><i class="fa-solid fa-file"></i></font>　What's new!</p>
                         </div>
                         <div class="works-box">
                             <div  class="works-box-menu">
-                                <div class="works-box-label"> <font color="#c9e99b">&#9670; </font> 未提出課題</div>
+                                <div class="works-box-label border-line"> <font color="#c9e99b">&#9670; </font> 太客（サポーターズ）</div>
+                                <!--
+                                <div class="hutokyaku">
+                                    <div class="hutokyaku-label">めっちゃ凄い人</div>
+                                    <div class="hutokyaku-name no1">焼きそばマイスター王国出身んぽたそさん</div>
+                                </div>
+                                <div class="hutokyaku">
+                                    <div class="hutokyaku-label">その次に凄い人</div>
+                                    <div class="hutokyaku-name no2">焼きそばホグワーツ: んぽたそさん</div>
+                                </div>
+                                <div class="hutokyaku">
+                                    <div class="hutokyaku-label">頑張った人</div>
+                                    <div class="hutokyaku-name no3">んぽたそさん</div>
+                                </div>
+                                -->
                             </div>
-                            <div class="works-link">＞ 未提出課題一覧</div>
+                            <a class="works-link">＞ 太客一覧</a>
                         </div>
                         <div class="works-box">
                             <div  class="works-box-menu">
-                                <div class="works-box-label"> <font color="#c9e99b">&#9670; </font>  提出記録</div>
+                                <div class="works-box-label"> <font color="#c9e99b">&#9670; </font>  損益分岐点表示</div>
                             </div>
                             <div class="works-link">＞ 全て表示</div>
                         </div>
