--- a/gallery.html
+++ b/gallery.html
@@ -81,6 +81,9 @@
             color: #0000dd;
             justify-content: flex-end;
         }
+        .header-conf a{
+            text-decoration: none;
+        }
         .text-border{
             border: 1px solid #aaa;
             height: 14px;
@@ -167,22 +170,22 @@
             height: 100%;
             border-left: 1px solid #ddd;
             border-right: 1px solid #ddd;
-            width:120px;
             display: flex;             
             justify-content: center;    
             align-items: center;        
             text-align: center;
             margin: auto 0;
+            padding: 0 20px;
         }
 
         .course-selected{
             color: #55a308;
             background: linear-gradient(#f9fdf2,#cce4a5);
         }
-        .courses:hover{
+        /*.courses:hover{
             color: #55a308;
             background: linear-gradient(#f9fdf2,#cce4a5);
-        }
+        }*/
 
 
         .top-bar2{
@@ -218,10 +221,10 @@
             margin-right:10px;
         }
 
-        .top-bar2-box:hover{
+        /*.top-bar2-box:hover{
             color: #2449a8;
             background: linear-gradient(#fff,#eee);
-        }
+        }*/
 
         .middle-bar{
             display: flex;
@@ -324,7 +327,7 @@
             color:#4d9d20;
             border-bottom: 4px solid #94cc36;
         }
-        .middle-bar-button:hover,.middle-bar-button2:hover {
+        /*.middle-bar-button:hover,.middle-bar-button2:hover {
             background: linear-gradient(#fff, #dcefbb);
             color:#4d9d20;
             border-bottom: 4px solid #94cc36;
@@ -332,7 +335,7 @@
 
         .middle-bar-button2:hover i{
             color:#4d9d20;
-        }
+        }*/
 
         .middle-bar-button-gap{
             margin-left:10px;
@@ -347,6 +350,10 @@
         .gallery-container img{
             border: 1px solid #aaa;
             margin-top: 20px;
+        }
+
+        .not-link{
+            color: #aaa;
         }
 
         @media screen and (max-width: 768px) {
@@ -364,6 +371,9 @@
             }
             .middle-bar-button {
                 width: 70px;
+            }
+            .courses{
+                padding: 0 10px;
             }
         }
 
@@ -383,11 +393,11 @@
                         <div class="now-date" id="now-date"></div>
                     </div>
                     <div class="header-conf">
-                        んぽたそ
+                        <div class="not-link">んぽたそ</div>
                         <div class="text-border"></div>
-                        設定
+                        <div class="not-link">設定</div>
                         <div class="text-border"></div>
-                        ログアウト
+                        <a href="./index.html">ログアウト</a>
                     </div>
                 </div>
                 <div class="header-icon"><img src="./images/npo_user.png" alt="ユーザーアイコン" height="45"/></div>
@@ -401,7 +411,7 @@
                 <div class="top-bar1">
                     <a href="./banana-home.html" class="my-page"><i class="fa-solid fa-user"></i>マイページ</a>
                     <div class="courses course-selected"><i class="fa-solid fa-chalkboard-user"></i>　コース</div>
-                    <div class="courses"><font size="+1"><i class="fa-solid fa-newspaper"></i></font>　ポートフォリオ</div>
+                    <div class="courses"><font size="+1"><i class="fa-solid fa-newspaper"></i></font>　ンポートフォリオ</div>
                 </div>
                 <div class="top-bar2">
                     <a href="./resnpo.html"><img class="resnpo" src="./images/resnpo_logo2.png" alt="resnpo" height="20"/></a>
@@ -466,7 +476,7 @@
                 <div class="banana-version">banana 3.141592</div>
                 <div class="copy-right">Copyright (C) 2025 驚額の殿堂</div>
             </div>
-            <div class="footer-text">マニュアル パーソナルデータについて</div>
+            <div class="footer-text not-link">マニュアル パーソナルデータについて</div>
         </div>
         
         <div class="footer2">
