--- a/resnpo.html
+++ b/resnpo.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="焼きそばホグワーツの出席管理ツール" />
     <meta name="keywords" content="雙峰祭, フランクフルト, 驚額の殿堂,resnpo">
-    <meta name="viewport" content="width=720">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./style.css" rel="stylesheet">
     <script src="./script.js"></script>
 
@@ -52,13 +52,15 @@
         }
 
         .main .form-text{
+            display: block; 
             text-align: center;
-            margin: 0px auto; 
             width: 100%; 
+            margin: 0px auto; 
             font-size: 28px;
             border-radius: 5px;
             border: 2px solid #f08200;
             outline: none; 
+            box-sizing: border-box;
         }
         .main input::placeholder {
             color: #cfcfcf; 
