--- a/resnpo.html
+++ b/resnpo.html
@@ -10,6 +10,10 @@
     <script src="./script.js"></script>
 
     <style>
+      *,
+      *::before,
+      *::after { box-sizing: border-box; }
+      
         body{
             background-color: #cccccc;
             font-size: 15px;
