--- a/genka.html
+++ b/genka.html
@@ -235,7 +235,7 @@
             border-bottom: 6px double #ddd;
         }
 
-        .middle-bar-icon{
+        .middle-bar-icon img{
             margin-left: 30px;
             margin-right: 10px;
             margin-top: -16px;
