--- a/doujin25.html
+++ b/doujin25.html
@@ -522,7 +522,7 @@
                     </li>
                     <li class="article">
                         <div class="title">
-                            cargoコントリビュート
+                            君も最強のパッケージマネージャ、Cargoにコントリビュートしよう！(仮)
                         </div>
                         <div class="bar"></div>
                         <div class="author">
@@ -535,7 +535,7 @@
                         </div>
                         <div class="bar"></div>
                         <div class="author">
-                            いなにわうどん (me[at]yokohama.dev)
+                            いなにわうどん (me[at]yokohama.dev，<a href="https://x.com/kyoto_inaniwa">Twitter</a>)
                         </div>
                     </li>
                     <li class="article">
