fix: htmlのタグを適切に

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <h2>フランクフルトシステム (Frankfurt System)</h2>
         </header>
 
-        <div class="content">
+        <main class="content">
           <div class="column one">
             <div class="legend">ログインサービス: 驚額殿堂のbananaサービス</div>
 
@@ -228,7 +228,7 @@
               </div>
             </form>
 
-            驚額殿堂のbananaサービス（販促支援アプリケーション）
+            <span>驚額殿堂のbananaサービス（販促支援アプリケーション）</span>
           </div>
 
           <div class="column two">
@@ -239,7 +239,7 @@
               <li>(Please bookmark the URL after moving from this page.)</li>
             </ul>
           </div>
-        </div>
+        </main>
       </div>
     </div>
     <!-- エンターここまで -->
