fix cource title

--- a/doujin25.html
+++ b/doujin25.html
@@ -467,12 +467,12 @@
                 </section>
     
                 <section class="middle-bar" aria-label="コースヘッダー">
-                    <div class="middle-bar-icon"><img src="./images/gallery_icon.png" alt="NPTS" height="50"/></div>
+                    <div class="middle-bar-icon"><img src="./images/NPTS.png" alt="NPTS" height="50"/></div>
                     <div class="middle-bar-contents">
                         <div class="course-meta">
                             <div class="course-meta1">
-                                <p class="middle-bar-course-number">GALLERY</p>
-                                <p class="middle-bar-course-name">ギャラリー</p>
+                                <p class="middle-bar-course-number">DOUJIN25</p>
+                                <p class="middle-bar-course-name">技術同人誌『フランクフルト』</p>
                             </div>
                             <div class="course-meta2">
                                 <p class="course-meta2-movie">
