--- a/banana-home.html
+++ b/banana-home.html
@@ -936,6 +936,24 @@
                             </article>
 
                             <article class="course-card" data-year="2025" role="listitem">
+                            <img src="./images/never-stop-npotaso.png" alt="NPTS" width="60">
+                            <div class="labels">
+                                <p class="code">GAME25 <span class="star-icon"><i class="fa-solid fa-star" aria-hidden="true"></i></span></p>
+                                <a class="title" href="./game.html">んぽたそゲーム</a>
+                                <p class="meta">2025　秋 <br><span class="text-muted">担当</span> 驚額の殿堂3(スリー)</p>
+                                <p class="meta">
+                                <span class="text-success"><i class="text-play fa-regular fa-circle-play" aria-hidden="true"></i></span>
+                                <span class="badge"><span class="text-primary">movie</span></span>
+                                <span class="text-fade"><i class="fa-solid fa-volume-high" aria-hidden="true"></i></span>
+                                <span class="text-fade"><i class="fa-solid fa-pen" aria-hidden="true"></i></span>
+                                <span class="text-fade"><i class="fa-solid fa-file" aria-hidden="true"></i></span>
+                                <span class="text-fade"><i class="fa-solid fa-message" aria-hidden="true"></i></span>
+                                <span class="text-fade"><i class="fa-solid fa-user-check" aria-hidden="true"></i></span>
+                                </p>
+                            </div>
+                            </article>
+
+                            <article class="course-card" data-year="2025" role="listitem">
                             <img src="./images/gallery_icon.png" alt="gallery" width="60">
                             <div class="labels">
                                 <p class="code">GALLERY <span class="star-icon"><i class="fa-solid fa-star" aria-hidden="true"></i></span></p>
