doujin25: update title for motorailgun

--- a/doujin25.html
+++ b/doujin25.html
@@ -535,7 +535,7 @@
                     </li>
                     <li class="article">
                         <div class="title">
-                            君も最強のパッケージマネージャ、Cargoにコントリビュートしよう！(仮)
+                            君も最強のパッケージマネージャ、Cargoにコントリビュートしよう！
                         </div>
                         <div class="bar"></div>
                         <div class="author">
