--- a/game.html
+++ b/game.html
@@ -577,7 +577,7 @@
                             <i class="fa-solid fa-newspaper card-icon" aria-hidden="true"></i>
                             <div class="card-text">
                                 <span class="card-title">壁破りゲーム</span>
-                                <span class="card-subtitle">2025</span>
+                                <span class="card-subtitle">2025-10-27</span>
                             </div>
                         </div>
                     </a>
@@ -586,7 +586,7 @@
                             <i class="fa-solid fa-newspaper card-icon" aria-hidden="true"></i>
                             <div class="card-text">
                                 <span class="card-title">意味あるない.com</span>
-                                <span class="card-subtitle">2025</span>
+                                <span class="card-subtitle">2025-10-27</span>
                             </div>
                         </div>
                     </a>
