--- a/game.html
+++ b/game.html
@@ -590,6 +590,15 @@
                             </div>
                         </div>
                     </a>
+                    <a href="https://nporun.yukari.uk/" target="_blank" rel="noopener">
+                        <div class="card-item">
+                            <i class="fa-solid fa-newspaper card-icon" aria-hidden="true"></i>
+                            <div class="card-text">
+                                <span class="card-title">nporun</span>
+                                <span class="card-subtitle">2025-10-27</span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </section>
         </main>
