update nporun name

--- a/game.html
+++ b/game.html
@@ -594,7 +594,7 @@
                         <div class="card-item">
                             <i class="fa-solid fa-newspaper card-icon" aria-hidden="true"></i>
                             <div class="card-text">
-                                <span class="card-title">nporun</span>
+                                <span class="card-title">んぽたそランニング</span>
                                 <span class="card-subtitle">2025-10-27</span>
                             </div>
                         </div>
